--- a/devcaptcha-client/tsconfig.json
+++ b/devcaptcha-client/tsconfig.json
@@ -5,13 +5,17 @@
     "noImplicitAny": true,
     "module": "CommonJS",
     "jsx": "react",
-    "target": "es5",
+    "target": "es6",
     "lib": [
       "es6",
       "dom",
-      "webworker"
+      "webworker",
+      "es2021"
     ],
     "allowSyntheticDefaultImports": true,
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "esModuleInterop": true,
+    "strict": true,
+    "skipLibCheck": true
   }
 }
